--- a/nifi-reversegeocoding-processors/pom.xml
+++ b/nifi-reversegeocoding-processors/pom.xml
@@ -52,9 +52,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-avro</artifactId>
+            <version>2.8.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
