--- a/nifi-reversegeocoding-processors/pom.xml
+++ b/nifi-reversegeocoding-processors/pom.xml
@@ -52,6 +52,11 @@
             <version>0.9.3</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
